[tool.poetry]
name = "dhanarjan"
version = "0.1.0"
description = ""
authors = ["Dhiraj Paryani"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.0"
plotly = "^5.19.0"
pandas = "^2.2.1"
google-auth = "^2.28.1"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.122.0"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
